Feature: added content to the remaining html pages

--- a/html/comics.html
+++ b/html/comics.html
@@ -34,13 +34,61 @@
   <main>
     <section class="hero-section">
       <div class="hero-content">
-        <h2>Welcome to the Amazing World of Spider-Man!</h2>
-        <p>Explore the thrilling adventures of your friendly neighborhood hero.</p>
+        <h2>Shuffle through a sample of spidey's original comic books!</h2>
+        <p>From it's orginal inception</p>
         <a href="#info" class="cta-button">Learn More</a>
         <a href="./html/news.html" target="_blank" class="cta-button">Contact</a>
       </div>
     </section>
   </main>
+
+  <section class="comics">
+    <div class="card">
+      <img src="../img/amazing-spiderman.jpg" alt="Spider-Man Comic 1">
+      <h3>Issue Name 1</h3>
+      <p>#1</p>
+    </div>
+    <div class="card">
+      <img src="../img/amazing-spiderman-2.jpg" alt="Spider-Man Comic 2">
+      <h3>Issue Name 2</h3>
+      <p>#2</p>
+    </div>
+    <div class="card">
+      <img src="../img/amazing-spiderman-3.jpg" alt="Spider-Man Comic 3">
+      <h3>Issue Name 3</h3>
+      <p>#3</p>
+    </div>
+    <div class="card">
+      <img src="../img/peter-parker.jpg" alt="Spider-Man Comic 3">
+      <h3>Issue Name 3</h3>
+      <p>#3</p>
+    </div>
+    <div class="card">
+      <img src="../img/peter-parker-2.jpg" alt="Spider-Man Comic 3">
+      <h3>Issue Name 3</h3>
+      <p>#3</p>
+    </div>
+    <div class="card">
+      <img src="../img/peter-parker-3.jpg" alt="Spider-Man Comic 3">
+      <h3>Issue Name 3</h3>
+      <p>#3</p>
+    </div>
+    <div class="card">
+      <img src="../img/spider-man-166.jpg" alt="Spider-Man Comic 3">
+      <h3>Issue Name 3</h3>
+      <p>#3</p>
+    </div>
+    <div class="card">
+      <img src="../img/spider-man-167.jpg" alt="Spider-Man Comic 3">
+      <h3>Issue Name 3</h3>
+      <p>#3</p>
+    </div>
+    <div class="card">
+      <img src="../img/spider-man-190.jpg" alt="Spider-Man Comic 3">
+      <h3>Issue Name 3</h3>
+      <p>#3</p>
+    </div>
+  </section>
   
   <footer>
     <p>&copy; 2023 Spider-Man Fan Page. All rights reserved.</p>
