--- a/html/news.html
+++ b/html/news.html
@@ -41,6 +41,32 @@
       </div>
     </section>
 
+    <section class="news">
+      <h2>Stay Updated</h2>
+      <form action="#" method="POST">
+        <div class="form-group flex-container">
+          <div class="first-name">
+            <label for="first-name">First Name</label>
+            <input type="text" id="first-name" name="first-name" required>
+          </div>
+          <div class="last-name">
+            <label for="last-name">Last Name</label>
+            <input type="text" id="last-name" name="last-name" required>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="email">Email Address</label>
+          <input type="email" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+          <label for="comments">Comments</label>
+          <textarea id="comments" name="comments" rows="4" required></textarea>
+        </div>
+        <div class="form-group">
+          <input type="submit" value="Submit">
+        </div>
+      </form>
+    </section>
   </main>
   
   <footer>
