fix: general styles

--- a/html/news.html
+++ b/html/news.html
@@ -34,10 +34,8 @@
   <main>
     <section class="hero-section">
       <div class="hero-content">
-        <h2>Welcome to the Amazing World of Spider-Man!</h2>
-        <p>Explore the thrilling adventures of your friendly neighborhood hero.</p>
-        <a href="#info" class="cta-button">Learn More</a>
-        <a href="./html/news.html" target="_blank" class="cta-button">Contact</a>
+        <h2>Join the newsletter!</h2>
+        <p>Keep updated to spidey's latest news.</p>
       </div>
     </section>
 
