feat: added new footer content, fix: general styles

--- a/index.html
+++ b/index.html
@@ -182,17 +182,58 @@
   </main>
   
   <footer>
-    <p>&copy; 2023 Spider-Man Fan Page. All rights reserved.</p>
-    <div class="logo-container">
-      <a href="https://www.instagram.com/spiderman/" target="_blank" rel="noopener noreferrer">
-        <img src="./img/instagram.png" alt="spidey's instagram page">
-      </a>
-      <a href="https://twitter.com/SpiderMan" target="_blank" rel="noopener noreferrer">
-        <img src="./img/twitter.png" alt="spidey's twitter page">
-      </a>
-      <a href="https://www.facebook.com/spiderman" target="_blank" rel="noopener noreferrer">        
-        <img src="./img/facebook.png" alt="spidey's facebook page">
-      </a>
+    <div class="info">
+      <p>&copy; 2023 Spider-Man Fan Page. All rights reserved.</p>
+      <div class="logo-container">
+        <a href="https://www.instagram.com/spiderman/" target="_blank" rel="noopener noreferrer">
+          <img src="./img/instagram.png" alt="spidey's instagram page">
+        </a>
+        <a href="https://twitter.com/SpiderMan" target="_blank" rel="noopener noreferrer">
+          <img src="./img/twitter.png" alt="spidey's twitter page">
+        </a>
+        <a href="https://www.facebook.com/spiderman" target="_blank" rel="noopener noreferrer">        
+          <img src="./img/facebook.png" alt="spidey's facebook page">
+        </a>
+      </div>
+    </div>
+
+    <div class="footer-container">
+      <div class="footer-section">
+        <h3>Characters</h3>
+        <ul>
+          <li><a href="characters.html">Spider-Man</a></li>
+          <li><a href="#">Mary Jane Watson</a></li>
+          <li><a href="#">Miles Morales</a></li>
+          <!-- Add more character links as needed -->
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h3>Comics</h3>
+        <ul>
+          <li><a href="comics.html">The Amazing Spider-Man #1</a></li>
+          <li><a href="#">The Amazing Spider-Man #2</a></li>
+          <li><a href="#">The Amazing Spider-Man #3</a></li>
+          <!-- Add more comic links as needed -->
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h3>Games</h3>
+        <ul>
+          <li><a href="games.html">Spider-Man (1982)</a></li>
+          <li><a href="#">The Amazing Spider-Man 2</a></li>
+          <li><a href="#">Marvel's Spider-Man</a></li>
+          <!-- Add more game links as needed -->
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h3>News</h3>
+        <ul>
+          <li><a href="news.html">Latest News</a></li>
+          <li><a href="#">Events</a></li>
+          <li><a href="#">Updates</a></li>
+          <!-- Add more news links as needed -->
+        </ul>
+      </div>
     </div>
   </footer>
 
