feat: added animation on load

--- a/html/games.html
+++ b/html/games.html
@@ -10,6 +10,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Marvel:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  <!--Animate.css-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <!--CSS-->
   <link rel="stylesheet" href="../css/games.css">
   <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
@@ -31,7 +33,7 @@
     </a>
   </header>
   
-  <main>
+  <main class="animate__animated animate__fadeIn">
     <section class="hero-section">
       <div class="hero-content">
         <h2>Games ahoy!</h2>
