feature: added media queries for small screens

--- a/html/news.html
+++ b/html/news.html
@@ -33,7 +33,7 @@
     </a>
   </header>
 
-  <main class="animate__animated animate__fadeIn">
+  <main class="animate__animated animate__fadeIn" id="content-container">
     <section class="hero-section">
       <div class="hero-content">
         <h2>Join the newsletter!</h2>
