--- a/html/comics.html
+++ b/html/comics.html
@@ -33,7 +33,7 @@
     </a>
   </header>
   
-  <main class="animate__animated animate__fadeIn">
+  <main class="animate__animated animate__fadeIn" id="content-container">
     <section class="hero-section">
       <div class="hero-content">
         <h2>Shuffle through a sample of spidey's original comic books!</h2>
